Introduce `ConstantsFormat` Refaster rule